final de authors Put Delete
